# bunq-hack-2027

./: .gitignore  README.md  app.py  backend.py  bunq_context.json  enrolled_faces.json  face_auth.py  main.py  pyproject.toml  risk_engine.py  setup_enrollment.py  voice_pipeline.py
detection/: claude_vision.py  moire_glare.py  rekognition.py
finn/: backend.py
finn/core/: face_auth.py  voice_pipeline.py
finn/integrations/bunq/: client.py  functions.py
utils/: bunq_functions.py
